--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  test:
+  Linux_test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -53,3 +53,53 @@ jobs:
         run: |
           set -e
           ccache --show-stats
+
+  Windows_test:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 22
+          cache: "npm"
+      - run: npm ci
+
+      - name: cache emsdk
+        uses: actions/cache@v4
+        with:
+          path: |
+            third_party/emsdk/node
+            third_party/emsdk/python
+            third_party/emsdk/upstream
+            third_party/emsdk/.emscripten
+          key: cache-${{ runner.os }}-emsdk-${{ hashFiles('scripts/**') }}
+
+      - uses: ./.github/action/setup-ccache
+        with:
+          size: 128M
+          key: ccache-${{ runner.os }}-build-${{ hashFiles('**/CMakeLists.txt') }}
+          restore-keys: |
+            ccache-${{ runner.os }}-build-
+
+      - name: Install Google Test
+        run: |
+          vcpkg install gtest:x64-windows
+          echo "GTest_ROOT=C:/vcpkg/installed/x64-windows" >> $GITHUB_ENV
+
+      - run: npm run build
+      - run: npm run test
+
+      - working-directory: ./example
+        run: |
+          set -e
+          npm ci
+          npm run test
+          npm run test:cjs
+
+      - name: verify ccache stats
+        run: |
+          set -e
+          ccache --show-stats
+
