--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -83,10 +83,10 @@ jobs:
       #     restore-keys: |
       #       ccache-${{ runner.os }}-build-
 
-      - name: Install Google Test
-        run: |
-          vcpkg install gtest:x64-windows
-          echo "GTest_ROOT=C:/vcpkg/installed/x64-windows" >> $GITHUB_ENV
+      # - name: Install Google Test
+      #   run: |
+      #     vcpkg install gtest:x64-windows
+      #     echo "GTest_ROOT=C:/vcpkg/installed/x64-windows" >> $GITHUB_ENV
 
       - name: install ninja
         run: choco install ninja
@@ -102,7 +102,7 @@ jobs:
           npm run test
           npm run test:cjs
 
-      - name: verify ccache stats
-        run: |
-          set -e
-          ccache --show-stats
+      # - name: verify ccache stats
+      #   run: |
+      #     set -e
+      #     ccache --show-stats
