--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -66,6 +66,8 @@ jobs:
           cache: "npm"
       - run: npm ci
 
+      - name: clear ccache
+        run: ccache --clear 
       # - name: cache emsdk
       #   uses: actions/cache@v4
       #   with:
