--- a/.github/action/setup-ccache/action.yml
+++ b/.github/action/setup-ccache/action.yml
@@ -33,6 +33,10 @@ runs:
         HOMEBREW_NO_AUTO_UPDATE: 1
         HOMEBREW_NO_INSTALL_CLEANUP: 1
 
+    - if: runner.os == "windows"
+      run: |
+        choco install ccache ninja -y
+
     - uses: actions/cache@v4
       with:
         path: build_cache
