--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -66,6 +66,23 @@ jobs:
           cache: "npm"
       - run: npm ci
 
+      - name: cache emsdk
+        uses: actions/cache@v4
+        with:
+          path: |
+            third_party/emsdk/node
+            third_party/emsdk/python
+            third_party/emsdk/upstream
+            third_party/emsdk/.emscripten
+          key: cache-${{ runner.os }}-emsdk-${{ hashFiles('scripts/**') }}
+
+      - uses: ./.github/action/setup-ccache
+        with:
+          size: 128M
+          key: ccache-${{ runner.os }}-build-${{ hashFiles('**/CMakeLists.txt') }}
+          restore-keys: |
+            ccache-${{ runner.os }}-build-
+
       - name: Install Google Test
         run: |
           vcpkg install gtest:x64-windows
