--- a/.github/action/setup-ccache/action.yml
+++ b/.github/action/setup-ccache/action.yml
@@ -33,7 +33,7 @@ runs:
         HOMEBREW_NO_AUTO_UPDATE: 1
         HOMEBREW_NO_INSTALL_CLEANUP: 1
 
-    - if: runner.os == "windows"
+    - if: runner.os == 'Windows'
       run: |
         choco install ccache ninja -y
 
