--- a/.github/action/setup-ccache/action.yml
+++ b/.github/action/setup-ccache/action.yml
@@ -34,6 +34,7 @@ runs:
         HOMEBREW_NO_INSTALL_CLEANUP: 1
 
     - if: runner.os == 'Windows'
+      shell: bash
       run: |
         choco install ccache ninja -y
 
