--- a/tests/cpp/CMakeLists.txt
+++ b/tests/cpp/CMakeLists.txt
@@ -1,4 +1,6 @@
-find_package(GTest REQUIRED)
+enable_testing()
+
+find_package(GTest CONFIG REQUIRED)
 include(FetchContent)
 
 file(GLOB test_sources CONFIGURE_DEPENDS *.cpp ./utils/*.cpp) # innclude lit test by default
