--- a/tests/cpp/CMakeLists.txt
+++ b/tests/cpp/CMakeLists.txt
@@ -1,6 +1,6 @@
 enable_testing()
 
-find_package(GTest CONFIG REQUIRED)
+find_package(GTest REQUIRED CONFIG)
 include(FetchContent)
 
 file(GLOB test_sources CONFIGURE_DEPENDS *.cpp ./utils/*.cpp) # innclude lit test by default
