--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -100,6 +100,10 @@ jobs:
         run: |
           cmake -B build -S .  -DCMAKE_PREFIX_PATH=C:/vcpkg/packages/gtest_x64-windows
           cmake --build build --parallel 2 --target wasm-instrumentation-test wasm-opt
+
+          ls ./build/bin/
+          ls ./build/bin/Debug
+
           ./build/bin/Debug/wasm-instrumentation-test.exe
 
       # - name: run test
