--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
     "assemblyscript-unittest-framework": "file:.."
   },
   "scripts": {
-    "test": "! as-test",
-    "test:cjs": "! as-test --config as-test.config.js"
+    "test": "as-test",
+    "test:cjs": "as-test --config as-test.config.js"
   }
 }
