--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -92,9 +92,10 @@ jobs:
         run: |
           npm run test:as
 
-      - working-directory: ./example
-        shell: bash
+      - shell: bash
+        working-directory: ./example
         run: |
+          set -e
           npm ci
           npm run test
           npm run test:cjs
